Fix: flex alignments for mobile

--- a/packages/core/src/sass/add-or-manage.scss
+++ b/packages/core/src/sass/add-or-manage.scss
@@ -190,6 +190,10 @@
                     height: auto;
                 }
             }
+
+            @include mobile {
+                flex-grow: 0;
+            }
         }
         &--xlarge {
             svg:first-child {
